--- a/MainWindow.fxml
+++ b/MainWindow.fxml
@@ -693,54 +693,59 @@
                         </ImageView>
                         <HBox fx:id="volumeBars" prefHeight="64.0" prefWidth="792.0">
                           <children>
-                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="72.0">
+                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="64.0">
                               <children>
-                                <ImageView fitWidth="4.0" pickOnBounds="true" preserveRatio="true" />
+                                <ImageView fitHeight="64.0" fitWidth="4.0" pickOnBounds="true" />
                               </children>
                             </StackPane>
-                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="72.0">
+                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="64.0">
                               <children>
-                                <ImageView fitWidth="4.0" pickOnBounds="true" preserveRatio="true" />
+                                <ImageView fitHeight="64.0" fitWidth="4.0" pickOnBounds="true" />
                               </children>
                             </StackPane>
-                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="72.0">
+                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="64.0">
                               <children>
-                                <ImageView fitWidth="4.0" pickOnBounds="true" preserveRatio="true" />
+                                <ImageView fitHeight="64.0" fitWidth="4.0" pickOnBounds="true" />
                               </children>
                             </StackPane>
-                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="72.0">
+                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="64.0">
                               <children>
-                                <ImageView fitWidth="4.0" pickOnBounds="true" preserveRatio="true" />
+                                <ImageView fitHeight="64.0" fitWidth="4.0" pickOnBounds="true" />
                               </children>
                             </StackPane>
-                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="72.0">
+                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="64.0">
                               <children>
-                                <ImageView fitWidth="4.0" pickOnBounds="true" preserveRatio="true" />
+                                <ImageView fitHeight="64.0" fitWidth="4.0" pickOnBounds="true" />
                               </children>
                             </StackPane>
-                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="72.0">
+                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="64.0">
                               <children>
-                                <ImageView fitWidth="4.0" pickOnBounds="true" preserveRatio="true" />
+                                <ImageView fitHeight="64.0" fitWidth="4.0" pickOnBounds="true" />
                               </children>
                             </StackPane>
-                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="72.0">
+                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="64.0">
                               <children>
-                                <ImageView fitWidth="4.0" pickOnBounds="true" preserveRatio="true" />
+                                <ImageView fitHeight="64.0" fitWidth="4.0" pickOnBounds="true" />
                               </children>
                             </StackPane>
-                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="72.0">
+                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="64.0">
                               <children>
-                                <ImageView fitWidth="4.0" pickOnBounds="true" preserveRatio="true" />
+                                <ImageView fitHeight="64.0" fitWidth="4.0" pickOnBounds="true" />
                               </children>
                             </StackPane>
-                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="72.0">
+                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="64.0">
                               <children>
-                                <ImageView fitWidth="4.0" pickOnBounds="true" preserveRatio="true" />
+                                <ImageView fitHeight="64.0" fitWidth="4.0" pickOnBounds="true" />
+                              </children>
+                            </StackPane>
+                            <StackPane id="StackPane" alignment="BOTTOM_CENTER" prefHeight="64.0" prefWidth="64.0">
+                              <children>
+                                <ImageView fitHeight="64.0" fitWidth="4.0" pickOnBounds="true" />
                               </children>
                             </StackPane>
                           </children>
                           <padding>
-                            <Insets left="126.0" />
+                            <Insets left="130.0" />
                           </padding>
                         </HBox>
                       </children>
@@ -749,7 +754,7 @@
                 </Pane>
                 <Pane id="ControlsPane" prefHeight="121.0" prefWidth="798.0">
                   <children>
-                    <Rectangle id="ControlsRect" arcHeight="5.0" arcWidth="5.0" blendMode="SRC_OVER" fill="$x1" height="120.0" layoutX="3.0" layoutY="-5.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="792.0" />
+                    <Rectangle id="ControlsRect" arcHeight="5.0" arcWidth="5.0" blendMode="SRC_OVER" fill="$x1" height="116.0" layoutX="3.0" layoutY="-3.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="792.0" />
                     <StackPane id="controls" layoutX="14.0" layoutY="7.0">
                       <children>
                         <HBox id="ControlsHolder" prefHeight="76.0" prefWidth="474.0">
