--- a/MainWindow.fxml
+++ b/MainWindow.fxml
@@ -120,18 +120,18 @@
                         </ImageView>
                       </children>
                     </StackPane>
-                    <HBox fx:id="staffMeasureNumbers" alignment="CENTER_LEFT" layoutX="20.0" layoutY="12.0" prefHeight="12.0" prefWidth="758.0" spacing="22.0">
+                    <HBox fx:id="staffMeasureNumbers" alignment="CENTER_LEFT" layoutX="20.0" layoutY="8.0" prefHeight="12.0" prefWidth="758.0" spacing="22.0">
                       <children>
-                        <HBox prefHeight="9.0" prefWidth="42.0" />
-                        <HBox prefHeight="9.0" prefWidth="42.0" />
-                        <HBox prefHeight="9.0" prefWidth="42.0" />
-                        <HBox prefHeight="9.0" prefWidth="42.0" />
-                        <HBox prefHeight="9.0" prefWidth="42.0" />
-                        <HBox prefHeight="9.0" prefWidth="42.0" />
-                        <HBox prefHeight="9.0" prefWidth="42.0" />
-                        <HBox prefHeight="9.0" prefWidth="42.0" />
-                        <HBox prefHeight="9.0" prefWidth="42.0" />
-                        <HBox prefHeight="9.0" prefWidth="42.0" />
+                        <HBox alignment="TOP_CENTER" prefHeight="9.0" prefWidth="42.0" />
+                        <HBox alignment="TOP_CENTER" prefHeight="9.0" prefWidth="42.0" />
+                        <HBox alignment="TOP_CENTER" prefHeight="9.0" prefWidth="42.0" />
+                        <HBox alignment="TOP_CENTER" prefHeight="9.0" prefWidth="42.0" />
+                        <HBox alignment="TOP_CENTER" prefHeight="9.0" prefWidth="42.0" />
+                        <HBox alignment="TOP_CENTER" prefHeight="9.0" prefWidth="42.0" />
+                        <HBox alignment="TOP_CENTER" prefHeight="9.0" prefWidth="42.0" />
+                        <HBox alignment="TOP_CENTER" prefHeight="9.0" prefWidth="42.0" />
+                        <HBox alignment="TOP_CENTER" prefHeight="9.0" prefWidth="42.0" />
+                        <HBox alignment="TOP_CENTER" prefHeight="9.0" prefWidth="42.0" />
                       </children>
                       <padding>
                         <Insets left="124.0" />
